# persona-backend

./: .dockerignore  .gitignore  .pep8  .pylintrc  Dockerfile  GiftCardDescription.md  README.md  docker-compose-debug.yml  docker-compose.yml  environment.example.py  manage.py  pyproject.toml  reqs.txt  runapp.sh
api/: admin.py  common_error_messages.py  constants.py  urls.py
api/models/: __init__.py  another_image.py  brand.py  category.py  collection.py  color.py  discount_card.py  fast_order.py  gift_card.py  helpful_info.py  main_content.py  order.py  product.py  promocode.py  server_settings.py  user.py
api/serializers/: __init__.py  brand.py  category.py  collection.py  color.py  discount_card.py  gift_card.py  main_content.py  order.py  product.py  promocode.py  user.py
api/sync_with_external_db/: __init__.py  sync_brands.py  sync_categories.py  sync_collection.py  sync_colors.py  sync_discount_cards.py  sync_images.py  sync_products.py  sync_sizes_page.py  sync_users.py
api/utils/: __init__.py  compress_img.py  connect_to_persona_db.py  custom_limiter.py  getUserOrErrorByToken.py  get_server_settings.py  get_women_and_men_cats.py  random_card_code.py  select_all_from_products.py  send_code_to_phone.py  special_encode_password.py  split_string.py  validate_and_format_phone_number.py
api/views/: __init__.py  basket.py  brands.py  brands_gender_separate.py  categories.py  change_password.py  check_order_status.py  check_promocode.py  create_fast_order.py  create_order.py  favorites.py  (+16 more)
persona_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+10 files in other folders)
